--- a/valuetransfer/src/main/res/layout/dialog_contact_chat_location.xml
+++ b/valuetransfer/src/main/res/layout/dialog_contact_chat_location.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,13 +11,12 @@
         android:id="@+id/ablActionBar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/tbActionBar"
-            app:popupTheme="@style/OptionsMenu"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
@@ -28,8 +26,10 @@
             app:contentInsetEnd="4dp"
             app:contentInsetLeft="0dp"
             app:contentInsetStart="0dp"
-            app:navigationIcon="?attr/homeAsUpIndicator">
-        <RelativeLayout
+            app:navigationIcon="?attr/homeAsUpIndicator"
+            app:popupTheme="@style/OptionsMenu">
+
+            <RelativeLayout
                 android:id="@+id/rlActionBar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -39,40 +39,40 @@
                 android:backgroundTint="?attr/backgroundColor"
                 android:orientation="horizontal">
 
-            <RelativeLayout
-                android:id="@+id/llTitleSubtitle"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:gravity="center_vertical"
-                android:orientation="vertical">
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvActionbarTitle"
+                <RelativeLayout
+                    android:id="@+id/llTitleSubtitle"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_alignParentStart="true"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textColor="?attr/onBackgroundColor"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    tools:text="Streetname 123" />
+                    android:layout_alignParentEnd="true"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvActionbarSubTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tvActionbarTitle"
-                    android:layout_alignParentStart="true"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textColor="?attr/onBackgroundSecondaryColor"
-                    android:textSize="14sp"
-                    tools:text="1234 AA Delft, Netherlands" />
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvActionbarTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:textColor="?attr/onBackgroundColor"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        tools:text="Streetname 123" />
 
-            </RelativeLayout>
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvActionbarSubTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tvActionbarTitle"
+                        android:layout_alignParentStart="true"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:textColor="?attr/onBackgroundSecondaryColor"
+                        android:textSize="14sp"
+                        tools:text="1234 AA Delft, Netherlands" />
+
+                </RelativeLayout>
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
@@ -91,16 +91,16 @@
         android:id="@+id/llOpenDirections"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginBottom="12dp"
         android:background="@drawable/pill_rounded_accent"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="8dp"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginBottom="12dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:visibility="gone"
         tools:visibility="visible">
 
         <ImageView
@@ -117,25 +117,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:text="Open in Google Maps"
-            android:textStyle="bold"
-            android:textColor="@color/white" />
+            android:text="@string/text_open_in_google_maps"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/llSendLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginBottom="12dp"
         android:background="@drawable/pill_rounded_accent"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="8dp"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginBottom="12dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:visibility="gone">
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
             android:layout_width="30dp"
@@ -149,37 +149,24 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="12dp">
+            android:layout_marginStart="12dp"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvLocationTypeSend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Send Your Current Location"
+                android:textColor="@color/white"
                 android:textStyle="bold"
-                android:textColor="@color/white" />
+                tools:text="Send Your Current Location" />
 
             <TextView
                 android:id="@+id/tvLocationNameSend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Mekelweg 4, 1234 AA Delft"
-                android:textColor="@color/light_gray" />
+                android:textColor="@color/light_gray"
+                tools:text="Mekelweg 4, 1234 AA Delft" />
         </LinearLayout>
     </LinearLayout>
-
-<!--    <Button-->
-<!--        android:id="@+id/btnSendLocation"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="40dp"-->
-<!--        android:layout_marginHorizontal="12dp"-->
-<!--        android:layout_marginBottom="12dp"-->
-<!--        style="@style/ButtonAccentRounded"-->
-<!--        android:text="@string/btn_send"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent" />-->
-
 </androidx.constraintlayout.widget.ConstraintLayout>
