--- a/valuetransfer/src/main/res/layout/dialog_contact.xml
+++ b/valuetransfer/src/main/res/layout/dialog_contact.xml
@@ -21,101 +21,81 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-
-<!--        <include-->
-<!--            android:id="@+id/dialogHandle"-->
-<!--            layout="@layout/handle_dialog" />-->
-
-        <!--    <ScrollView-->
-        <!--        android:layout_width="match_parent"-->
-        <!--        android:layout_height="match_parent"-->
-        <!--        android:layout_marginTop="8dp"-->
-        <!--        android:scrollbars="none"-->
-        <!--        android:orientation="vertical"-->
-        <!--        app:layout_constraintStart_toStartOf="parent"-->
-        <!--        app:layout_constraintEnd_toEndOf="parent"-->
-        <!--        app:layout_constraintTop_toBottomOf="@+id/dialogHandle"-->
-        <!--        app:layout_constraintBottom_toBottomOf="parent">-->
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:paddingBottom="8dp">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvContactImage"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="12dp"
-                app:cardElevation="0dp"
-                app:cardCornerRadius="@dimen/cornerRadius"
                 android:background="@drawable/square_rounded"
-                android:layout_gravity="center_horizontal">
+                app:cardCornerRadius="@dimen/cornerRadius"
+                app:cardElevation="0dp">
 
                 <ImageView
                     android:id="@+id/ivIdenticon"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_gravity="center"
                     android:background="?attr/widgetColor"
                     android:padding="8dp"
-                    tools:src="@drawable/ic_contact"
-                    android:layout_gravity="center"
                     android:visibility="gone"
-                    tools:visibility="visible"/>
+                    tools:src="@drawable/ic_contact"
+                    tools:visibility="visible" />
 
                 <ImageView
                     android:id="@+id/ivContactImage"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
-                    tools:src="@drawable/ic_contact"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
                     android:visibility="gone"
-                    tools:visibility="visible"/>
+                    tools:src="@drawable/ic_contact"
+                    tools:visibility="visible" />
 
             </androidx.cardview.widget.CardView>
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="20dp"
                 android:layout_gravity="center"
+                android:layout_marginTop="4dp"
                 android:gravity="center"
-                android:layout_marginTop="4dp">
+                android:paddingHorizontal="20dp">
 
                 <TextView
                     android:id="@+id/tvNickNameValue"
                     style="@style/DialogTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_toLeftOf="@+id/ivNickNameEdit"
                     android:ellipsize="end"
                     android:gravity="start"
                     android:maxLines="1"
-                    android:layout_alignParentTop="true"
-                    android:layout_toLeftOf="@+id/ivNickNameEdit"
                     tools:text="Piet" />
 
                 <ImageView
                     android:id="@+id/ivNickNameEdit"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:padding="5dp"
-                    android:layout_marginStart="8dp"
-                    android:src="@drawable/ic_edit"
-                    app:tint="?attr/mutedLightColor"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_gravity="center_vertical"/>
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="8dp"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_edit"
+                    app:tint="?attr/mutedLightColor" />
 
             </RelativeLayout>
 
@@ -137,19 +117,19 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:drawablePadding="2dp"
-                        app:drawableTint="?attr/colorAccent"
-                        android:text="Verified"
-                        app:drawableStartCompat="@drawable/ic_verified_smaller" />
+                        android:text="@string/text_verified"
+                        app:drawableStartCompat="@drawable/ic_verified_smaller"
+                        app:drawableTint="?attr/colorAccent" />
 
                     <TextView
                         android:id="@+id/tvNotVerifiedStatus"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:drawablePadding="2dp"
-                        app:drawableTint="?attr/colorError"
                         android:gravity="center"
-                        android:text="Not Verified"
-                        app:drawableStartCompat="@drawable/ic_verified_not_smaller" />
+                        android:text="@string/text_unverified"
+                        app:drawableStartCompat="@drawable/ic_verified_not_smaller"
+                        app:drawableTint="?attr/colorError" />
                 </FrameLayout>
 
                 <ImageView
@@ -168,7 +148,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="4dp"
-                android:text="A contact is verified when during import both the camera and NFC chip are used to ensure legitimacy of the document. When a contact is not verified, it's identity name below may be forged."
+                android:text="@string/text_verified_info"
                 android:textStyle="italic"
                 android:visibility="gone"
                 tools:visibility="visible" />
@@ -193,7 +173,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
                         android:gravity="center_vertical"
-                        android:text="Identity Name"
+                        android:text="@string/text_identity_name"
                         android:textColor="?attr/onWidgetColor"
                         android:textStyle="bold" />
 
@@ -225,14 +205,13 @@
                     android:id="@+id/tvIdentityNameInfo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="The identity name consists of the initials and surname of the contact that are on the official identity document."
+                    android:text="@string/text_identity_name_info"
                     android:textStyle="italic"
                     android:visibility="gone"
                     tools:visibility="visible" />
 
             </LinearLayout>
         </LinearLayout>
-        <!--    </ScrollView>-->
     </LinearLayout>
 
     <LinearLayout
@@ -249,12 +228,12 @@
             android:id="@+id/llTabChooser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="4dp"
-            android:padding="4dp"
             android:background="@drawable/square_rounded"
+            android:orientation="horizontal"
+            android:padding="4dp"
             android:weightSum="2">
 
             <TextView
@@ -268,7 +247,7 @@
                 android:gravity="center"
                 android:paddingHorizontal="8dp"
                 android:paddingVertical="4dp"
-                android:text="Identity Attributes"
+                android:text="@string/text_title_identity_attributes"
                 android:textColor="?attr/onWidgetColor"
                 android:textStyle="bold" />
 
@@ -283,57 +262,30 @@
                 android:gravity="center"
                 android:paddingHorizontal="8dp"
                 android:paddingVertical="4dp"
-                android:text="Transactions"
+                android:text="@string/text_title_transactions"
                 android:textColor="?attr/onWidgetColor" />
 
         </LinearLayout>
-
-<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--            android:id="@+id/clIdentityAttributes"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/llTabChooser">-->
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/clIdentityAttributes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-<!--            <ScrollView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintTop_toTopOf="parent"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent">-->
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvContactIdentityAttributes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="12dp"
                     tools:itemCount="3"
-                    tools:listitem="@layout/item_contact_identity_attribute"
-                    />
+                    tools:listitem="@layout/item_contact_identity_attribute" />
             </LinearLayout>
-            </androidx.core.widget.NestedScrollView>
-<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--            android:id="@+id/clTransactions"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:visibility="gone"-->
-<!--            tools:visibility="visible"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/llTabChooser">-->
+        </androidx.core.widget.NestedScrollView>
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/clTransactions"
@@ -342,26 +294,17 @@
             android:visibility="gone"
             tools:visibility="visible">
 
-<!--            <ScrollView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintTop_toTopOf="parent"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent">-->
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvContactTransactions"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     tools:itemCount="1"
-                    tools:listitem="@layout/item_exchange_transaction"
-                    />
+                    tools:listitem="@layout/item_exchange_transaction" />
 
                 <Button
                     android:id="@+id/btnMoreTransactions"
@@ -377,9 +320,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/rvContactTransactions"
                     tools:visibility="visible" />
-                </LinearLayout>
-            </androidx.core.widget.NestedScrollView>
-<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
-    </LinearLayout>
 
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
